
pysmb-1.0.4, 1 May 2012
=======================
- Adds support for "smb://" URL in urllib2 python packages to retrieve or upload
  files from/to remote CIFS servers.
- Improve documentation

pysmb-1.0.3, 28 April 2012
===========================

- Fix a crash in SMB._storFile() method which occurs when the remote CIFS server
  utilizes a max raw size larger than 65535 bytes. The bug was discovered with
  Windows 7 Pro SP1.
- Fix a bug in SMB._listPath() method where the files/folders time information are
  not properly converted to Epoch time.
- Add NBNSProtocol.queryIPForName() and NetBIOS.queryIPForName() methods to
  query for a machine's NetBIOS name at the given IP address.
- Add SMBProtocol.retrieveFileFromOffset() and SMBConnection.retrieveFileFromOffset()
  methods for a finer control of file retrieval operation with read offset and write
  limits.


pysmb-1.0.2, 31 March 2012
==========================

- Fix a bug in SMB._handleSessionChallenge() method in base.py where the domain attribute
  was not used to generate the corresponding NTLM authentication packets, resulting in
  the default WORKGROUP domain for used for all subsequent authentications.

pysmb-1.0.1, 25 Jan 2012
========================

- Fixes a bug in listPath() method which causes directory listing for
  sub-directories to return an empty list.
- Fixes an incorrect implementation of the TRANS2_FIND_FIRST2 and
  TRANS2_FIND_NEXT2 request/response handling which causes directory listing
  to crash when the remote directory contains a certain number of entries.


pysmb-1.0.0, 25 Dec 2011
========================

- Completely rewrites pysmb. API is not compatible with previous pysmb-0.x.x
- Supports NTLMv1 and NTLMv2 authentication
- Adds in NMB/SMB protocol implementation for use with Twisted framework
- Tested with Windows XP SP3, Windows Vista, Windows 7 and Samba 3.x
- Requires Python 2.4.4 or later, and pyasn1. Not tested with Python3

pysmb-0.4.5, 22 Jun 2009